--- a/frontend/PopCafe/react-files/src/styles/main.css
+++ b/frontend/PopCafe/react-files/src/styles/main.css
@@ -6,6 +6,8 @@
 @import url("../../public/assets/css/slick.css");
 @import url("../../public/assets/css/swiper-bundle.css");
 @import url("../../public/assets/css/style.css");
+@import url("../../public/assets/css/login.css");
+
 .recent-post-area .pagination,
 .Shop-pages .pagination,
 .blog-standard-pages .pagination {
