--- a/frontend/PopCafe/react-files/src/styles/main.css
+++ b/frontend/PopCafe/react-files/src/styles/main.css
@@ -7,6 +7,7 @@
 @import url("../../public/assets/css/swiper-bundle.css");
 @import url("../../public/assets/css/style.css");
 @import url("../../public/assets/css/login.css");
+@import url("../../public/assets/css/styleback.css");
 
 .recent-post-area .pagination,
 .Shop-pages .pagination,
