--- a/frontend/PopCafe/react-files/public/assets/css/styleback.css
+++ b/frontend/PopCafe/react-files/public/assets/css/styleback.css
@@ -18,3 +18,74 @@
 .inbold label{
     font-weight: bold;
 }
+
+.table-container {
+    margin: 20px;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed; /* Imposta la larghezza delle colonne in base alla larghezza della tabella */
+  }
+  
+  th,
+  td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+    word-break: break-word; /* Suddivide le parole lunghe in più righe se necessario */
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+  
+  tr:last-child td {
+    border-bottom: none;
+  }
+  
+  .button-3 {
+    background-color: #CF6849;
+    color: white;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 5px;
+  }
+  
+  .button-3:hover {
+    background-color: #CF6849
+    
+    .dish-table {
+        margin: 20px;
+      }
+      
+      table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      
+      th,
+      td {
+        padding: 8px;
+        text-align: left;
+      }
+      
+      th {
+        background-color: #f2f2f2;
+      }
+      
+      td input[type="checkbox"] {
+        margin: 0;
+      }
+      
+      .buttons-container {
+        margin-top: 10px;
+      }
+      
+      .buttons-container button {
+        margin-right: 10px;
+      };
+  }
