--- a/frontend/PopCafe/react-files/public/assets/css/style.css
+++ b/frontend/PopCafe/react-files/public/assets/css/style.css
@@ -8017,7 +8017,7 @@ footer .footer-btm .privacy-policy p a:hover {
   z-index: 9;
   display: flex;
   align-items: center;
-  background-image: url(../images/bg/bredcumb-bg.png);
+  background-image: url(../images/bg/contatti.png);
   background-size: cover;
   padding: 260px 0px 140px;
 }
