--- a/frontend/PopCafe/react-files/public/assets/css/style.scss
+++ b/frontend/PopCafe/react-files/public/assets/css/style.scss
@@ -7834,7 +7834,7 @@ footer{
     z-index: 9;
     display: flex;
     align-items: center;
-    background-image: url(../images/bg/bredcumb-bg.png);
+    background-image: url(../images/bg/contatti.png);
     background-size: cover;
     padding: 260px 0px 140px;
     @media (max-width: 400px) {
