--- a/frontend/PopCafe/react-files/public/assets/css/style.css
+++ b/frontend/PopCafe/react-files/public/assets/css/style.css
@@ -5315,7 +5315,7 @@ header.style-3 .main-menu ul li.menu-item-has-children > i {
    11. Footer Area   
 =======================================*/
 footer {
-  background-image: linear-gradient(rgba(9, 22, 29, 0.9), rgba(9, 22, 29, 0.9)), url(../images/bg/footer-bg.png);
+  background-color: rgba(9, 22, 29, 0.9);
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
